[gd_scene load_steps=14 format=2]

[ext_resource path="res://TileSet.tres" type="TileSet" id=1]
[ext_resource path="res://modules/custom_light/CustomLight.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/img/monochrome_tilemap_packed.png" type="Texture" id=3]
[ext_resource path="res://Door.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]
[ext_resource path="res://platforms/Platform.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/img/monochrome_tilemap_transparent_packed.png" type="Texture" id=7]
[ext_resource path="res://platforms/Platforms.gd" type="Script" id=8]
[ext_resource path="res://conveyor_belt/ConveyorBelt.tscn" type="PackedScene" id=9]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 16, 0, 9.12114, 16, 8.92734, 16, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16, 8.9908, 16, 16, 0, 16, 0, 8.96051 )

[sub_resource type="TileSet" id=2]
0/name = "monochrome_tilemap_packed.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 96, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "monochrome_tilemap_transparent_packed.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 96, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="YupMap" type="TileMap" parent="."]
light_mask = 2
z_index = -1
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -786428, 2, 0, -786427, 2, 1, -786426, 2, 2, -786404, 2, 0, -786403, 2, 1, -786402, 2, 2, -720892, 2, 65536, -720891, 2, 65537, -720890, 2, 65538, -720868, 2, 65536, -720867, 2, 65537, -720866, 2, 65538, -655356, 2, 65536, -655355, 2, 65537, -655354, 2, 65538, -655332, 2, 65536, -655331, 2, 65537, -655330, 2, 65538, -589820, 2, 65536, -589819, 2, 65537, -589818, 2, 65538, -589796, 2, 65536, -589795, 2, 65537, -589794, 2, 65538, -524284, 2, 65536, -524283, 2, 65537, -524282, 2, 65538, -524260, 2, 65536, -524259, 2, 65537, -524258, 2, 65538, -458748, 2, 65536, -458747, 2, 65537, -458746, 2, 65538, -458724, 2, 65536, -458723, 2, 65537, -458722, 2, 65538, -393212, 2, 65536, -393211, 2, 65537, -393210, 2, 65538, -393188, 2, 65536, -393187, 2, 65537, -393186, 2, 65538, -327676, 2, 65536, -327675, 2, 65537, -327674, 2, 65538, -327652, 2, 65536, -327651, 2, 65537, -327650, 2, 65538, -262140, 2, 65536, -262139, 2, 65537, -262138, 2, 65538, -262116, 2, 65536, -262115, 2, 65537, -262114, 2, 65538, -196604, 2, 65536, -196603, 2, 65537, -196602, 2, 65538, -196580, 2, 65536, -196579, 2, 65537, -196578, 2, 65538, -131068, 2, 65536, -131067, 2, 65537, -131066, 2, 65538, -131044, 2, 65536, -131043, 2, 65537, -131042, 2, 65538, -65532, 2, 131072, -65531, 2, 131073, -65530, 2, 131074, -65508, 2, 131072, -65507, 2, 131073, -65506, 2, 131074, 131064, 2, 0, 131065, 2, 1, 131066, 2, 1, 131067, 2, 1, 131068, 2, 1, 131069, 2, 1, 131070, 2, 1, 131071, 2, 1, 65536, 2, 1, 65537, 2, 1, 65538, 2, 1, 65539, 2, 1, 65540, 2, 1, 65541, 2, 1, 65542, 2, 1, 65543, 2, 1, 65544, 2, 1, 65545, 2, 1, 65546, 2, 1, 65547, 2, 1, 65548, 2, 1, 65549, 2, 2, 65556, 2, 0, 65557, 2, 1, 65558, 2, 1, 65559, 2, 1, 65560, 2, 1, 65561, 2, 1, 65562, 2, 1, 65563, 2, 1, 65564, 2, 1, 65565, 2, 1, 65566, 2, 1, 65567, 2, 1, 65568, 2, 1, 65569, 2, 1, 65570, 2, 1, 65571, 2, 1, 65572, 2, 1, 65573, 2, 1, 65574, 2, 2, 196600, 2, 131072, 196601, 2, 131073, 196602, 2, 131073, 196603, 2, 131073, 196604, 2, 131073, 196605, 2, 131073, 196606, 2, 131073, 196607, 2, 131073, 131072, 2, 131073, 131073, 2, 131073, 131074, 2, 131073, 131075, 2, 131073, 131076, 2, 131073, 131077, 2, 131073, 131078, 2, 131073, 131079, 2, 131073, 131080, 2, 131073, 131081, 2, 131073, 131082, 2, 131073, 131083, 2, 131073, 131084, 2, 131073, 131085, 2, 196613, 131086, 2, 196609, 131087, 2, 196609, 131088, 2, 196609, 131089, 2, 196609, 131090, 2, 196609, 131091, 2, 196609, 131092, 2, 196614, 131093, 2, 131073, 131094, 2, 131073, 131095, 2, 131073, 131096, 2, 131073, 131097, 2, 131073, 131098, 2, 131073, 131099, 2, 131073, 131100, 2, 131073, 131101, 2, 131073, 131102, 2, 131073, 131103, 2, 131073, 131104, 2, 131073, 131105, 2, 131073, 131106, 2, 131073, 131107, 2, 131073, 131108, 2, 131073, 131109, 2, 131073, 131110, 2, 131074 )

[node name="CustomLight" parent="YupMap" instance=ExtResource( 2 )]
visible = false
position = Vector2( 79, 16 )
strength = 0.43

[node name="CustomLight2" parent="YupMap" instance=ExtResource( 2 )]
visible = false
position = Vector2( 303, 32 )
strength = 0.43

[node name="NopeMap" type="TileMap" parent="." groups=["nope"]]
light_mask = 2
z_index = -1
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.694, 1 )
motion_mirroring = Vector2( 320, 320 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 0.24, 0.24, 0.24, 1 )
texture = ExtResource( 3 )
centered = false

[node name="DoorIn" parent="." instance=ExtResource( 4 )]
position = Vector2( 72, 16 )
z_index = -1

[node name="DoorOut" parent="." instance=ExtResource( 4 )]
position = Vector2( 456, 16 )
z_index = -1
is_open = false

[node name="Platforms" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Platform" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 160, -16 )
offset = Vector2( 0, -6 )
duration = 1.5

[node name="Platform2" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 320, -80 )
offset = Vector2( -6, 0 )
duration = 1.5

[node name="Tween" type="Tween" parent="Platforms"]
repeat = true
playback/repeat = true

[node name="ConveyorBelt" parent="." instance=ExtResource( 9 )]
position = Vector2( 240, -8 )
constant_linear_velocity = Vector2( 36, 0 )
length = 6

[node name="Player" parent="." instance=ExtResource( 11 )]

[node name="CustomLight" parent="Player" instance=ExtResource( 2 )]
position = Vector2( 0, -4 )

[connection signal="player_passed_door" from="DoorIn" to="." method="_on_player_passed_door_in"]
[connection signal="player_passed_door" from="DoorOut" to="." method="_on_player_passed_door_out"]
